[package]
name = "rust_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etherparse = "0.13.0"
tun = "0.6.1"
tun-tap = "0.1.4"
bitflags = "2.4.1"
nix = { version = "0.27.1", features = ["poll"] }
libc = "0.2.151"
